registries.conf: configure credential helpers
Allow for configuring credential helpers in `registries.conf` files.

Credential helpers are configured as a top-level field
`credential-helpers`.  This is an array of strings.  Items listed in the
array are consulted in the specified order when looking up or removing
credentials.

Note that there is a built-in credential helpers `containers-auth.json`
for using auth files.  If no global defaults are specified, we will
fallback to using auth files.  This assures backwards compat and a
working default setting.

The traces of the disabled "keyring" functionality have largely been
removed.  If we ever want to re-enable support, we can follow the
example of auth files and specify a new built-in keyring helper.

Using a built-in helper simplifies the code quite a bit since the code
structure boilds down to conditionally dispatching helpers; everything's
a credential helper with some special values for built-in helpers.

Make sure that the execution paths are properly logged (debug level).

Signed-off-by: Qi Wang <qiwan@redhat.com>
Signed-off-by: Valentin Rothberg <rothberg@redhat.com>

--- a/image/pkg/sysregistriesv2/testdata/registries.conf.d/config-1.conf
+++ b/image/pkg/sysregistriesv2/testdata/registries.conf.d/config-1.conf
@@ -1,4 +1,5 @@
 unqualified-search-registries = ["example-overwrite.com"]
+credential-helpers = ["we", "will", "be", "overridden", "later"]
 
 [[registry]]
 location = "1.com"
