--- a/image/pkg/sysregistriesv2/testdata/registries.conf.d/config-2.conf
+++ b/image/pkg/sysregistriesv2/testdata/registries.conf.d/config-2.conf
@@ -1,5 +1,10 @@
 short-name-mode="permissive"
 
+credential-helpers=["dropin-1", "dropin-2"]
+
+[[registry]]
+location = "1.com"
+
 [[registry]]
 location = "2.com"
 
