--- a/image/docker/fixtures/registries.d/internet-user.yaml
+++ b/image/docker/fixtures/registries.d/internet-user.yaml
@@ -5,7 +5,7 @@ docker:
         sigstore: https://sigstore.contoso.com/fordocker
     docker.io/centos:
         sigstore: https://sigstore.centos.org/
-    docker.io/centos/mybetaprooduct:
+    docker.io/centos/mybetaproduct:
         sigstore: http://localhost:9999/mybetaWIP/sigstore
         sigstore-staging: file:///srv/mybetaWIP/sigstore
     docker.io/centos/mybetaproduct:latest:
