--- a/image/manifest/fixtures/v2s1.manifest.json
+++ b/image/manifest/fixtures/v2s1.manifest.json
@@ -1,6 +1,6 @@
 {
    "schemaVersion": 1,
-   "name": "mitr/buxybox",
+   "name": "mitr/busybox",
    "tag": "latest",
    "architecture": "amd64",
    "fsLayers": [
