Enable subdomain matching in registries.conf
This commit allows the prefix field in registries.conf to be in the
format: `prefix = "*.example.com" for wildcard subdomain matching.

refMatchesPrefix has been renamed to refMatchingPrefix. refMatchingPrefix
now returns the length of the prefix if there's a match
and the prefix doesn't contain `*.`. If prefix contains `*.` and there's
a match, then refMatchingPrefix returns the length of the refString
without the image. This change removes the need for
any additional string comparison in `rewriteReference`.

Co-authored-by: Valentin Rothberg <rothberg@redhat.com>
Signed-off-by: Lokesh Mandvekar <lsm5@fedoraproject.org>

--- a/image/pkg/sysregistriesv2/testdata/find-registry.conf
+++ b/image/pkg/sysregistriesv2/testdata/find-registry.conf
@@ -16,3 +16,47 @@ location = "no-prefix.com"
 [[registry]]
 location = "empty-prefix.com"
 prefix = ""
+
+[[registry]]
+location = "subdomain-prefix.com"
+prefix = "*.so.simple-prefix.com"
+
+[[registry]]
+location = "subdomain-prefix-2.com"
+prefix = "*.simple-prefix.com"
+
+# For subdomain override using dropin registries.conf.d/subdomain-override-1.conf
+[[registry]]
+location = "subdomain-prefix-1.com"
+prefix = "*.not.quite.simple-prefix.com"
+
+# For subdomain override failure using registries.conf.d/subdomain-override-2.conf
+# with unmatched prefix = "*.example.com"
+[[registry]]
+location = "subdomain-prefix-2.com"
+prefix = "*.docker.io"
+
+# For subdomain override using dropin registries.conf.d/subdomain-override-3.conf
+[[registry]]
+location = "subdomain-prefix-3.com"
+prefix = "*.bar.example.com"
+
+# For longest wildcarded prefix match in comparison with "*.docker.io"
+[[registry]]
+location = "subdomain-prefix-4.com"
+prefix = "*.bar.docker.io"
+
+# For longest prefix match in comaprison with *.bar.example.com
+[[registry]]
+location = "subdomain-prefix-5.com"
+prefix = "foo.bar.example.com:5000"
+
+# For empty location with wildcard prefix
+[[registry]]
+prefix="*.internal.registry.com"
+
+[[registry]]
+prefix="*.com"
+
+[[registry]]
+prefix="*.foobar.io"
