--- a/image/registries.conf
+++ b/image/registries.conf
@@ -24,6 +24,9 @@
 # # The "prefix" field is used to choose the relevant [[registry]] TOML table;
 # # (only) the TOML table with the longest match for the input image name
 # # (taking into account namespace/repo/tag/digest separators) is used.
+# # 
+# # The prefix can also be of the form: *.example.com for wildcard subdomain
+# # matching.
 # #
 # # If the prefix field is missing, it defaults to be the same as the "location" field.
 # prefix = "example.com/foo"
@@ -37,7 +40,7 @@
 #
 # # The physical location of the "prefix"-rooted namespace.
 # #
-# # By default, this equal to "prefix" (in which case "prefix" can be omitted
+# # By default, this is equal to "prefix" (in which case "prefix" can be omitted
 # # and the [[registry]] TOML table can only specify "location").
 # #
 # # Example: Given
@@ -45,6 +48,10 @@
 # #   location = "internal-registry-for-example.net/bar"
 # # requests for the image example.com/foo/myimage:latest will actually work with the
 # # internal-registry-for-example.net/bar/myimage:latest image.
+#
+# # The location can be empty iff prefix is in a
+# # wildcarded format: "*.example.com". In this case, the input reference will
+# # be used as-is without any rewrite.
 # location = internal-registry-for-example.com/bar"
 #
 # # (Possibly-partial) mirrors for the "prefix"-rooted namespace.
