--- a/image/.cirrus.yml
+++ b/image/.cirrus.yml
@@ -77,6 +77,7 @@ validate_task:
 
 
 cross_task:
+    only_if: &not_docs $CIRRUS_CHANGE_TITLE !=~ '.*CI:DOCS.*'
     container: &std_container
         dockerfile: .cirrus.Dockerfile
         # golangci-lint tool requires heavy cpu/memory or gets OOM'd
@@ -92,6 +93,7 @@ test_task:
     alias: test
     depends_on:
         - validate
+    only_if: *not_docs
     container: *std_container
     matrix:
         - name: "Test"
@@ -118,6 +120,7 @@ test_skopeo_task:
     depends_on:
         - validate
         - cross
+    only_if: *not_docs
     gce_instance:
         image_project: libpod-218412
         zone: "us-central1-f"
