--- a/image/.cirrus.yml
+++ b/image/.cirrus.yml
@@ -98,10 +98,10 @@ test_task:
     matrix:
         - name: "Test"
           env:
-              BUILDTAGS: 'btrfs_noversion libdm_no_deferred_remove no_libsubid'
+              BUILDTAGS: 'btrfs_noversion libdm_no_deferred_remove'
         - name: "Test w/ opengpg"
           env:
-              BUILDTAGS: &withopengpg 'btrfs_noversion libdm_no_deferred_remove containers_image_openpgp  no_libsubid'
+              BUILDTAGS: &withopengpg 'btrfs_noversion libdm_no_deferred_remove containers_image_openpgp'
     script: |
         make tools
         make test BUILDTAGS="$BUILDTAGS"
@@ -129,7 +129,7 @@ test_skopeo_task:
     matrix:
         - name: "Skopeo Test"
           env:
-              BUILDTAGS: 'btrfs_noversion libdm_no_deferred_remove no_libsubid'
+              BUILDTAGS: 'btrfs_noversion libdm_no_deferred_remove'
         - name: "Skopeo Test w/ opengpg"
           env:
               BUILDTAGS: *withopengpg
