Add codespell fixes
Signed-off-by: Daniel J Walsh <dwalsh@redhat.com>

--- a/image/pkg/sysregistriesv2/testdata/find-registry.conf
+++ b/image/pkg/sysregistriesv2/testdata/find-registry.conf
@@ -46,7 +46,7 @@ prefix = "*.bar.example.com"
 location = "subdomain-prefix-4.com"
 prefix = "*.bar.docker.io"
 
-# For longest prefix match in comaprison with *.bar.example.com
+# For longest prefix match in comparison with *.bar.example.com
 [[registry]]
 location = "subdomain-prefix-5.com"
 prefix = "foo.bar.example.com:5000"
