--- a/image/Makefile
+++ b/image/Makefile
@@ -26,18 +26,10 @@ MANPAGES ?= $(MANPAGES_MD:%.md=%)
 
 export PATH := $(PATH):${GOBIN}
 
-# On macOS, (brew install gpgme) installs it within /usr/local, but /usr/local/include is not in the default search path.
-# Rather than hard-code this directory, use gpgme-config. Sadly that must be done at the top-level user
-# instead of locally in the gpgme subpackage, because cgo supports only pkg-config, not general shell scripts,
-# and gpgme does not install a pkg-config file.
-# If gpgme is not installed or gpgme-config can’t be found for other reasons, the error is silently ignored
-# (and the user will probably find out because the cgo compilation will fail).
-GPGME_ENV = CGO_CFLAGS="$(shell gpgme-config --cflags 2>/dev/null)" CGO_LDFLAGS="$(shell gpgme-config --libs 2>/dev/null)"
-
 all: tools test validate .gitvalidation
 
 build:
-	$(GPGME_ENV) GO111MODULE="on" go build $(BUILDFLAGS) ./...
+	GO111MODULE="on" go build $(BUILDFLAGS) ./...
 
 $(MANPAGES): %: %.md
 	$(GOMD2MAN) -in $< -out $@
@@ -76,7 +68,7 @@ clean:
 	rm -rf $(MANPAGES)
 
 test:
-	@$(GPGME_ENV) GO111MODULE="on" go test $(BUILDFLAGS) -cover ./...
+	@GO111MODULE="on" go test $(BUILDFLAGS) -cover ./...
 
 fmt:
 	@gofmt -l -s -w $(SOURCE_DIRS)
