--- a/image/docker/fixtures/registries.d/internet-user.yaml
+++ b/image/docker/fixtures/registries.d/internet-user.yaml
@@ -1,12 +1,12 @@
 default-docker:
-    sigstore: file:///mnt/companywide/signatures/for/other/repositories
+    lookaside: file:///mnt/companywide/signatures/for/other/repositories
 docker:
     docker.io/contoso:
-        sigstore: https://sigstore.contoso.com/fordocker
+        lookaside: https://lookaside.contoso.com/fordocker
     docker.io/centos:
-        sigstore: https://sigstore.centos.org/
+        lookaside: https://lookaside.centos.org/
     docker.io/centos/mybetaproduct:
-        sigstore: http://localhost:9999/mybetaWIP/sigstore
-        sigstore-staging: file:///srv/mybetaWIP/sigstore
+        lookaside: http://localhost:9999/mybetaWIP/lookaside
+        lookaside-staging: file:///srv/mybetaWIP/lookaside
     docker.io/centos/mybetaproduct:latest:
-        sigstore: https://sigstore.centos.org/
+        lookaside: https://lookaside.centos.org/
