Don't call net/url.URL.Parse when we mean net/url.Parse
Fixes a panic per https://github.com/containers/podman/issues/16301 .

Signed-off-by: Miloslav Trmač <mitr@redhat.com>

--- a/image/docker/fixtures/registries.d/internal-example.com.yaml
+++ b/image/docker/fixtures/registries.d/internal-example.com.yaml
@@ -12,3 +12,7 @@ docker:
         lookaside: file:///home/mitr/mydevelopment2
     localhost/invalid/url/test:
         lookaside: ":emptyscheme"
+    localhost/file/path/test:
+        lookaside: "/no/scheme/just/a/path"
+    localhost/relative/path/test:
+        lookaside: "no/scheme/relative/path"
