Vendor in latest containers/storage
Had to add vendor-in-container in Makefile to make
go mod tidy work on my machine

Signed-off-by: Daniel J Walsh <dwalsh@redhat.com>

--- a/image/Makefile
+++ b/image/Makefile
@@ -85,3 +85,6 @@ lint:
 	git fetch -q "https://github.com/containers/image.git" "refs/heads/main"
 	upstream="$$(git rev-parse --verify FETCH_HEAD)" ; \
 		$(GOBIN)/git-validation -q -run DCO,short-subject,dangling-whitespace -range $$upstream..HEAD
+
+vendor-in-container:
+	podman run --privileged --rm --env HOME=/root -v `pwd`:/src -w /src golang go mod tidy
