manifest: introduce internal/manifest.ListInternal and freeze manifest.List
Flips dependency of internal and public manifest.List API and introduces
private manifest.List API which will be extended in future for new
features.

[NO NEW TESTS NEEDED]
[NO TESTS NEEDED]

Signed-off-by: Aditya R <arajan@redhat.com>

--- a/image/manifest/fixtures/unknown-version.manifest.json
+++ b/image/manifest/fixtures/unknown-version.manifest.json
@@ -1,5 +1,1 @@
-{
-   "schemaVersion": 99999,
-   "name": "mitr/noversion-nonsense",
-   "tag": "latest"
-}
+../../internal/manifest/testdata/unknown-version.manifest.json
